# uklatn

./: .editorconfig  .gitignore  .spi.yml  CMakeLists.txt  MANIFEST.in  Package.swift  composer.json  go.work  jsr.json  package.json  pyproject.toml  readme.md  setup.py  uklatn.gemspec
.github/workflows/: build-c.yml  build-csharp.yml  build-elixir.yml  build-go.yml  build-java.yml  build-js.yml  build-julia.yml  build-php.yml  build-py.yml  build-ruby.yml  build-rust.yml  build-swift.yml  test-builds.yml
c/: _tables.c  _tests.c  index.md  readme.md  testuklatn.c  uklatn.c
c/include/: uklatn.h
csharp/: .gitignore  Makefile  docfx.json  readme.md  uklatn.sln
csharp/UkrainianLatin/: UkrainianLatin.cs  UkrainianLatin.csproj
csharp/UkrainianLatin.Tests/: UkrainianLatin.Tests.csproj  UkrainianLatinTest.cs
docs/: _config.yml  about.md
docs/_posts/: 2024-10-29-uklatn-c.md  (+11 more)
elixir/: .editorconfig  .gitignore  mix.exs  readme.md
go/: .editorconfig
java/: Makefile  pom.xml  readme.md
js/: cli.js  package.json  readme.md  testuklatn.js  uklatn.d.ts  uklatn.js
julia/: Project.toml  readme.md
php/: readme.md
python/: _uklatn.c  index.md  readme.md  uklatn.py
python-icu/: Makefile  _uklatn.c  uklatn.py
ruby/: Makefile  readme.md  uklatn.gemspec
rust/: Cargo.toml  readme.md
rust/src/: lib.rs
rust/tests/: uklatn_test.rs
src/: Makefile  gentables.py  gentests.py  readme.md  srcgen.py  uk-uk_Latn_KMU_55.txt  uk_Latn_DSTU_9112_A-uk.txt  uk_Latn_DSTU_9112_B-uk.txt
swift/: readme.md
tools/: Makefile  gentables.py  gentests.py  readme.md
(+47 files in other folders)
