[package]
name = "uklatn"
version = "1.18.0"
license = "MIT"
homepage = "https://github.com/paiv/uklatn"
repository = "https://github.com/paiv/uklatn"
description = "Ukrainian Cyrillic transliteration to Latin script"
keywords = ["ukraine", "transliteration", "romanization"]
categories = ["text-processing"]
authors = ["Pavlo Ivashkov"]
edition = "2021"

[dependencies]
fancy-regex = "0.14.0"
once_cell = "1.20.2"
unicode-normalization = "0.1.20"
